@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="general">Pengaturan Umum</label>
+	<label index="general.use">Gunakan / melihat fungsi pencarian</label>
+	<label index="general.area">Gunakan Pencarian Lokasi</label>
+</labels>
