@@ -1,5 +1,8 @@
 todoyu search changelog
 
+search 1.5.2 - not released yet
+	* Added: Indonesian Language. Credits to Abdush Shomad.
+
 search 1.5.1 - 2013-12-31
 	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
 	* Changed: Headlet initialisation only if present (fullscreen-support)
